@@ -93,6 +93,7 @@ driver-mode 3 (event-driven, process based) specific options:
 MySQL specific options:
 
 --db-password=PASSWORD  Database *password*.
+--mysql-socket=FILE  Use the socket *file* to connect to the database.
 
 PostgreSQL specific options:
 
